Fix favourite items not fitting on small screen

--- a/resources/assets/sass/modules/lists/_favourites.scss
+++ b/resources/assets/sass/modules/lists/_favourites.scss
@@ -13,4 +13,12 @@
             background: lightblue;
         }
     }
+    
+    @media (max-width: $breakpoint1) {
+        max-height: 505px;
+        top: 49px;
+        right: auto;
+        width: 91%;
+        max-width: 91%;
+    }
 }
